# tauri-plugin-app-control

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/main/java/app/tauri/appcontrol/: AppControlPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
docs/: build-this.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  tsconfig.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: close_app.toml  is_app_in_foreground.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
webview-src/: index.ts  tsconfig.json
