[package]
name = "tauri-plugin-app-control"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-app-control"
build = "build.rs"

[dependencies]
tauri = "2.5.1"
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
