[package]
name = "tauri-plugin-app-control"
version = "0.1.1"
authors = [ "You <you@example.com>" ]
description = "A Tauri plugin for Android application lifecycle control (minimize, close, exit, state)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/tauri-plugin-app-control"
homepage = "https://github.com/your-username/tauri-plugin-app-control"
readme = "README.md"
keywords = ["tauri-plugin", "android", "mobile", "app-lifecycle", "app-control"]
categories = ["gui", "api-bindings", "os"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-app-control"
build = "build.rs"

[dependencies]
tauri = "2.5.1"
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s" # Optimize for size
